Migrate to Java 11, use new writeString method.